kubernetes/user-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  labels:
    app: user-api
    version: v1
spec:
  replicas: 1  # Number of desired pod replicas
  selector:
    matchLabels:
      app: user-api
      version: v1
  template:
    metadata:
      labels:
        app: user-api
        version: v1
    spec:
      containers:
        - name: user-api
          image: macbucheron/user_api
          ports:
            - containerPort: 3000  # Expose port 3000 in the container
          livenessProbe:
            httpGet:
              path: /health  # Liveness probe endpoint
              port: 3000
            initialDelaySeconds: 30  # Delay before starting liveness probes
            periodSeconds: 10  # Interval between liveness probes
          readinessProbe:
            httpGet:
              path: /health  # Readiness probe endpoint
              port: 3000
            initialDelaySeconds: 5  # Delay before starting readiness probes
            periodSeconds: 10  # Interval between readiness probes
