kubernetes/user-api/service-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  selector:
    app: user-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
