kubernetes/user-api/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-api
spec:
  hosts:
    - "user-api-service.local"
  gateways:
    - user-api-gateway
  http:
    - route:
      - destination:
          host: user-api-service
          subset: v1
        weight: 50
      - destination:
          host: user-api-service
          subset: v2
        weight: 50
